섹션4:템플릿:WebApiExRateProvider리펙터링